# socket-in-linux

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  client  client.c  client.sh  rootca.key  rootca.srl  run.sh  server  server.c  server.crt  server.sh
C/: Makefile  buffer_config.h  client  client.c  client.h  client_socket.c  client_socket.h  client_tls.c  client_tls.h  error_handler.h
C/certificate/: rootca.crt
Echo/client/: Makefile  client.c  config.h
Echo/server/: Makefile  config.h  server.c
S/: server  server.c  server.csr  server.h  server_socket.c  server_socket.h  server_tls.c
echo/: client_tls.h  server_tls.h
echo/client/: Makefile  client.c
echo/include/: tcpsocket_tls.h
echo/server/: Makefile  server.c
include/: config.h  server_socket.h  server_tls.h
lib/: Makefile  client_socket.c  client_tls.c  error_handler.c  server_socket.c  server_tls.c
src/C/: Makefile  client.c
src/S/: Makefile  config.h  server.c
src/S/certificate/: server.key
tcpsocket_tls/: Makefile  client_socket.c  client_tls.c  common_tls.c  error_handler.c  error_handler.h  server_socket.c  server_tls.c  tcpsocket_tls.h
